[gd_scene load_steps=40 format=3 uid="uid://kjjavn7ia6c0"]

[ext_resource type="Texture2D" uid="uid://c60lxdaep3jwo" path="res://Assets/Enemies/Scorpion/scorp_die.png" id="1_13iih"]
[ext_resource type="Script" path="res://Scripts/scorpion.gd" id="1_d3p0k"]
[ext_resource type="Texture2D" uid="uid://8tfeii5xqm1s" path="res://Assets/Enemies/Scorpion/scorp_hurt.png" id="2_rbr12"]
[ext_resource type="Texture2D" uid="uid://dt55mtdiugew1" path="res://Assets/Enemies/Scorpion/scorp_idle.png" id="3_x83lm"]
[ext_resource type="Texture2D" uid="uid://b6akc4uknapb" path="res://Assets/Enemies/Scorpion/scorp_shoot.png" id="4_ite8l"]
[ext_resource type="Texture2D" uid="uid://dswsbg0pqmagh" path="res://Assets/Enemies/Scorpion/scorp_walk.png" id="5_jj6od"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qp2xi"]
atlas = ExtResource("1_13iih")
region = Rect2(0, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4rjg"]
atlas = ExtResource("1_13iih")
region = Rect2(49, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1mc2"]
atlas = ExtResource("1_13iih")
region = Rect2(98, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pxah"]
atlas = ExtResource("1_13iih")
region = Rect2(147, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8o5yv"]
atlas = ExtResource("1_13iih")
region = Rect2(196, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3cb2"]
atlas = ExtResource("1_13iih")
region = Rect2(245, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ua0w"]
atlas = ExtResource("2_rbr12")
region = Rect2(0, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7fxo"]
atlas = ExtResource("2_rbr12")
region = Rect2(49, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4k3d4"]
atlas = ExtResource("2_rbr12")
region = Rect2(98, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_76og1"]
atlas = ExtResource("3_x83lm")
region = Rect2(0, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cat4c"]
atlas = ExtResource("3_x83lm")
region = Rect2(49, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5rah"]
atlas = ExtResource("3_x83lm")
region = Rect2(98, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypwbi"]
atlas = ExtResource("3_x83lm")
region = Rect2(147, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv681"]
atlas = ExtResource("3_x83lm")
region = Rect2(196, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_463wg"]
atlas = ExtResource("3_x83lm")
region = Rect2(245, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4tok"]
atlas = ExtResource("3_x83lm")
region = Rect2(294, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_chglf"]
atlas = ExtResource("3_x83lm")
region = Rect2(343, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6hsp"]
atlas = ExtResource("3_x83lm")
region = Rect2(392, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lpcr"]
atlas = ExtResource("3_x83lm")
region = Rect2(441, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2guyf"]
atlas = ExtResource("3_x83lm")
region = Rect2(490, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjnhq"]
atlas = ExtResource("3_x83lm")
region = Rect2(539, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_57ms4"]
atlas = ExtResource("3_x83lm")
region = Rect2(588, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkumm"]
atlas = ExtResource("3_x83lm")
region = Rect2(637, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmkwh"]
atlas = ExtResource("4_ite8l")
region = Rect2(0, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_io3gf"]
atlas = ExtResource("4_ite8l")
region = Rect2(49, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7sic"]
atlas = ExtResource("5_jj6od")
region = Rect2(0, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h61u2"]
atlas = ExtResource("5_jj6od")
region = Rect2(49, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvs3a"]
atlas = ExtResource("5_jj6od")
region = Rect2(98, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxywu"]
atlas = ExtResource("5_jj6od")
region = Rect2(147, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3t0n"]
atlas = ExtResource("5_jj6od")
region = Rect2(196, 0, 49, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fb2kj"]
atlas = ExtResource("5_jj6od")
region = Rect2(245, 0, 49, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_0wwra"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp2xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4rjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1mc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pxah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8o5yv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3cb2")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ua0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7fxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k3d4")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_76og1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cat4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5rah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypwbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv681")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_463wg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4tok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chglf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6hsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lpcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2guyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjnhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57ms4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkumm")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmkwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_io3gf")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7sic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h61u2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvs3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxywu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3t0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fb2kj")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_shxdm"]

[node name="Scorpion" type="CharacterBody2D"]
script = ExtResource("1_d3p0k")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0wwra")
animation = &"hurt"
frame = 2
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1)
shape = SubResource("RectangleShape2D_shxdm")

[node name="WalkTimer" type="Timer" parent="."]

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="timeout" from="WalkTimer" to="." method="_on_walk_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
